--- a/zenn/package.json
+++ b/zenn/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-sqlite": "~15.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
