--- a/zenn/package.json
+++ b/zenn/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.10.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
