feat: notificações push

--- a/zenn/app.json
+++ b/zenn/app.json
@@ -20,10 +20,16 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.gabe.gms.zenn"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "70e0b3ca-1528-48f3-90ec-80a67995ee28"
+      }
     }
   }
 }
